# gluon-cv

./: .gitignore  .gitmodules  Jenkinsfile  MANIFEST.in  Makefile  README.md  brazil.code-workspace  setup.py  temporary
.github/: stale.yml
.github/workflows/: build_docs.sh  build_test.yml  ci.yml  gpu_test.sh  gpu_test.yml  stale.yml  unittest.yml
docs/: .gitignore  Doxyfile  Makefile  README.txt  applications.html  build.yml  build_docs.sh  conf.py  config.yml  contents.rst  dive_deep_cifar10.rst  index.md  index.rst  install.rst  slides.md  slides.rst
docs/_static/: applications.html  classification_throughputs.html  detection_coco_per_class.html  detection_throughputs.html  google_analytics.js  tabs.js
docs/_templates/: demo.html  index.html  layout.html
docs/api/: data.batchify.rst  data.datasets.rst  data.transforms.rst  datasets.rst  index.rst  loss.rst  model_zoo.rst  models.rst  nn.rst  transforms.rst  utils.rst
docs/classification/: cifar10-dive-deep.md  cifar10-how-to.rst  imagenet-dataset.md  imagenet-dataset.rst  index.rst
docs/experiments/: datasets.rst  how_to_cifar.md  how_to_cifar10.rst  index.rst  semanticseg.rst
docs/get_started/: install.md  install.rst
docs/how_to/: contribute.md  contribute.rst  index.rst  support.md  support.rst
docs/install/: index.rst  install-include-torch.rst  install-include.rst  install-jetson.md  install-more.rst  install-pi.md  validate-mxnet.md
docs/model_zoo/: action.rst  action_recognition.rst  action_recognition_mxnet.rst  action_recognition_torch.rst  classification.rst  classification_mxnet.rst  classification_torch.rst  depth.rst  depth_mxnet.rst  detection.rst  detection_mxnet.rst  detection_torch.rst  index.rst  object_detection.rst  pose.rst  pose_mxnet.rst  segmentation.rst  segmentation_mxnet.rst
docs/tutorials/: index.rst
docs/tutorials_torch/: index.rst
gluoncv/: __init__.py  check.py  loss.py
gluoncv/auto/: __init__.py
gluoncv/data/: __init__.py  base.py  batchify.py  cached_dataset.py  cityscapes.py  dataloader.py  mhp.py  pascal_context.py  sampler.py  segbase.py
gluoncv/model_zoo/: __init__.py  alexnet.py  attention.py  cifarresnet.py  cifarresnext.py  cifarwideresnet.py  coders.py  danet.py  deeplabv3.py  deeplabv3_plus.py  deeplabv3b_plus.py  densenet.py  dla.py  efficientnet.py  fastscnn.py  fcn.py  features.py  googlenet.py  hrnet.py  icnet.py  inception.py  mixnet.py  mobile_pose.py  mobilenet.py  mobilenetv3.py  mobilepose.py  model_store.py  model_zoo.py  msgnet.py  nasnet.py  pose_resnet.py  pspnet.py  residual_attentionnet.py  resnest.py  resnet.py  resnetv1b.py  resnext.py  se_resnet.py  segbase.py  senet.py  (+6 more)
gluoncv/nn/: __init__.py  bbox.py  block.py  coder.py  cython_bbox.pyx  dropblock.py  feature.py  gn.py  matcher.py  predictor.py  sampler.py  splat.py
gluoncv/pipelines/: __init__.py  base.py  center_net.py
gluoncv/torch/: __init__.py
gluoncv/utils/: __init__.py  bbox.py  block.py  compress_json.py  download.py  export_helper.py  filesystem.py  init_mod.py  lr_scheduler.py  parallel.py  plot_history.py  random.py  siamrpn_tracker.py  sync_loader_helper.py  tracking_bbox.py  transforms.py  version.py
gluonvision/: __init__.py
gluonvision/data/: __init__.py  base.py  dataloader.py  segbase.py
gluonvision/model_zoo/: __init__.py  bbox.py  cifarresnet.py  cifarwideresnet.py  coders.py  dilatedresnet.py  fcn.py  features.py  losses.py  matchers.py  model_store.py  model_zoo.py  predictors.py  pspnet.py  samplers.py  segbase.py  syncbn.py  vgg_atrous.py
gluonvision/utils/: __init__.py  block.py  download.py  filesystem.py  lr_scheduler.py  metric.py  parallel.py  plot_history.py  random.py  util.py
mygluoncv/: __init__.py
mygluoncv/data/: dataloader.py  segbase.py
mygluoncv/model_zoo/: deeplabv3.py  inception.py  model_zoo.py  resnext.py  segbase.py
mygluoncv/nn/: bbox.py  coder.py  sampler.py
mygluoncv/utils/: __init__.py  bbox.py  export_helper.py
scripts/: README.md  ssd_demo.py
scripts/action-recognition/: ARXIV.md  README.md  feat_extract.py  feat_extract_pytorch.py  get_flops.py  get_fps.py  inference.py  test_ddp_pytorch.py  test_recognizer.py  train_ddp_pytorch.py  train_ddp_shortonly_pytorch.py  train_recognizer.py
scripts/auto/: hpo_image_classification.py
scripts/classification/: README.md  README.txt  demo_cifar10.py  fit_classification.py  test_classification.py  train_cifar10.py  train_cifar10_mixup.py  train_imagenet.py
scripts/datasets/: DET.py  README.md  README.txt  VID.py  ade20k.py  cityscapes.py  coco_tracking.py  hmdb51.py  ilsvrc_det.py  ilsvrc_vid.py  imagenet.py  imagenet_val_maps.pkl  kinetics400.py  lsun.py  market1501.py  mhp_v1.py  mscoco.py  otb2015.py  pascal_context.py  pascal_voc.py  setup_ade20k.py  setup_imagenet.py  setup_pascal_voc.py  somethingsomethingv2.py  tiny_motorbike.py  ucf101.py  youtube_bb.py
scripts/deployment/: README.md
scripts/deployment/cpp-inference/: .gitignore  CMakeLists.txt  README.md  detector.cpp
scripts/deployment/cpp-inference/src/: argparse.hpp  clipp.hpp  common.hpp  detect.cpp
scripts/deployment/tvm-deploy/: .gitignore  CMakeLists.txt  README.md  tvm_runtime_pack.cc
scripts/deployment/tvm-deploy/pack/: pack.py
scripts/deployment/tvm-deploy/src/: CImg.h
scripts/deployment/tvm-deploy/src/classification/: classification.cpp  common.hpp
scripts/deployment/tvm-deploy/src/detection/: common.hpp  detection.cpp
scripts/deployment/tvm-deploy/tools/: export.py  export_classify.py  export_detect.py
scripts/depth/: demo.py  demo_videos.py  options.py  test.py  test_debug.py  test_pose.py  test_simple.py  train.py  trainer.py  utils.py
scripts/detection/: README.md  README.txt  demo_ssd.py  demo_webcam_run.py  train_ssd.py
scripts/instance/: README.md
scripts/keypoint/: train.py
scripts/keypoints/: cam_demo.py  coco.sh  convert_validate.sh  demo.py  train.py  train_coco.sh  train_simple_pose.py  (+2 more)
tests/: lint.py  py2.yml  py3.yml  py3_auto.yml  py3_mxnet.yml  py3_mxnet_ci.yml  py3_torch.yml  pylint.yml  pylintrc
tutorials/: README.txt  ssd_20min.py  ssd_demo.py
(+1188 files in other folders)
